--- a/aws/provision-eks-cluster/package.json
+++ b/aws/provision-eks-cluster/package.json
@@ -1,12 +1,13 @@
 {
-    "name": "my-eks-cluster",
-    "devDependencies": {
-        "@types/node": "^16"
-    },
-    "dependencies": {
-        "typescript": "^4.0.0",
-        "@pulumi/pulumi": "^3.0.0",
-        "@pulumi/awsx": "^1.0.0",
-        "@pulumi/eks": "^1.0.0"
-    }
+  "name": "my-eks-cluster",
+  "devDependencies": {
+    "@types/node": "^16"
+  },
+  "dependencies": {
+    "typescript": "^4.0.0",
+    "@pulumi/pulumi": "^3.0.0",
+    "@pulumi/awsx": "^1.0.0",
+    "@pulumi/eks": "^1.0.0",
+    "@pulumi/aws": "5.42.0"
+  }
 }
